# tform

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: ci.yml
examples/: address_form.rs  login_form.rs  survey_form.rs
src/: form.rs  lib.rs  navigation.rs  style.rs
src/block/: address.rs  contact.rs  date_range.rs  mod.rs
src/field/: checkbox.rs  mod.rs  select.rs  text.rs
src/validation/: mod.rs  rules.rs
